# deqn-jax

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  disaster_corrected.tex  mkdocs.yml  pyproject.toml
.claude/: ralph_disaster_diag_prompt.md  ralph_disaster_so_sweep_prompt.md  ralph_refactor_prompt.md  ralph_typing_prompt.md  settings.json
.claude/hooks/: ruff_on_edit.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  model_request.md
.github/workflows/: docs.yml  test.yml
configs/: bm_deterministic.yaml  bm_labor.yaml  bm_labor_constrained.yaml  brock_mirman.yaml  default.yaml  disaster.yaml  disaster_calvo.yaml  disaster_log.yaml  disaster_mao.yaml  disaster_p001.yaml  disaster_p001_detss.yaml  disaster_p001_riskylin.yaml  disaster_p001_zlb.yaml  disaster_p005.yaml  disaster_p005_anchor001.yaml  disaster_p005_anchor01.yaml  disaster_p005_detss.yaml  disaster_p005_riskylin.yaml  disaster_p005_zlb.yaml  disaster_p02_cmrlib.yaml  disaster_p02_detss.yaml  disaster_p02_kappaonly.yaml  disaster_p02_riskylin.yaml  disaster_p02_zlb.yaml  disaster_p05.yaml  disaster_p05_riskylin.yaml  disaster_p05_zlb.yaml  disaster_p0_zlb.yaml  disaster_p1.yaml  disaster_p10_riskylin.yaml  disaster_p10_zlb.yaml  disaster_p10_zlb_huber_sob.yaml  disaster_p10_zlb_relu.yaml  disaster_p10_zlb_zlbfeat.yaml  disaster_pdis.yaml  disaster_sqrtw.yaml  irbc.yaml  olg_analytic_6.yaml  olg_lifecycle.yaml
configs/sweeps/: disaster_kf_validation.yaml  disaster_so_base.yaml
docs/: composite_loss.md  deqn_mao_audit.md  disaster.tex  disaster_corrected.tex  disaster_corrected_addendum.tex  disaster_diagnostics_plan.md  disaster_for_external_review.md  disaster_model_errata.md  disaster_model_specification.md  implementing_a_model.md  running_experiments.md  typing_audit.md  verification_SUSPECT.md  why.md
docs/dev/: aio_loss_estimator.md  alpha_release_checklist.md  disaster_equation_shape_priors.md  disaster_ss_inconsistency.md  disaster_stability_findings.md  elb_findings.md  framework_audit_2026-05.md  framework_audit_raw_findings.md  monolith_refactor_plan.md  reading_guide.md
docs/dev/figures/: aio_head_to_head_results.json  plot_diagnostic_curves.py
docs/figures/: training_step_spec.md
docs/site/: REFERENCE.md  architecture.md  autodiff.md  config_reference.md  index.md  reading_guide.md  running_experiments.md  what_is_deqn.md  why.md
docs/site/api/: config.md  index.md  loss.md  models.md  networks.md  optimizers.md  trainer.md  types.md
docs/site/ecosystem/: deqn-agent.md
docs/site/examples/: api.md  cli.md
docs/site/gallery/: bm_labor.ipynb  bm_labor_constrained.ipynb  brock_mirman.ipynb  index.md  irbc.ipynb  olg_analytic_6.ipynb  olg_lifecycle.ipynb
docs/site/getting-started/: configuration.md  installation.md  quickstart.md
docs/site/guides/: index.md
docs/site/method-zoo/: index.md
docs/site/models/: adding.md  brock_mirman.md  disaster.md  implementing.md  index.md
docs/site/networks/: adding.md  linear_plus_mlp.md  sequence.md
docs/site/optimizers/: adding.md  index.md
docs/site/training/: checkpointing.md  composite_loss.md  curriculum.md
docs/superpowers/plans/: 2026-05-11-mech-interp-deqn.md
docs/superpowers/specs/: 2026-05-11-mech-interp-deqn-design.md
examples/: README.md  _build_bm_labor_constrained_notebook.py  _build_disaster_notebook.py  _build_interp_notebook.py  _build_irbc_notebook.py  _build_olg_lifecycle_notebook.py  bm_deterministic.ipynb  bm_labor.ipynb  bm_labor_constrained.ipynb  brock_mirman.ipynb  disaster.ipynb  interp_brock_mirman.ipynb  irbc.ipynb  olg_analytic_6.ipynb  olg_lifecycle.ipynb
examples_suspect/: bm_deterministic.ipynb  bm_labor.ipynb  bm_labor_constrained.ipynb  olg_analytic_6.ipynb
scripts/: aio_bias_floor_diagnostic.py  aio_head_to_head.py  check_module_graph.py  disaster_anchor_diagnostic.py  fetch_sweep_results.sh  gen_config_reference.py  make_plots.py  run_sweep_in_container.sh  sweep_disaster_kf_validation.py  sweep_disaster_second_order.py
src/deqn_jax/: __init__.py  active_subspace.py  active_subspace_plot.py  api.py  benchmark.py  cli.py  config.py  dynare_io.py  evaluate.py  interp.py  irf.py  metrics.py  types.py
src/deqn_jax/config/: __init__.py  _base.py  io.py  loss.py  network.py  optimizer.py  replay.py  train.py
src/deqn_jax/evaluate/: __init__.py  cli.py  diagnostics.py  dynare.py  simulate.py
src/deqn_jax/models/: __init__.py  _complementarity.py  brock_mirman.py  disaster.py  variable_spec.py  variables.py
src/deqn_jax/networks/: __init__.py  common.py  factory.py  kf_anchored_mlp.py  linear_plus_mlp.py  lstm.py  mlp.py  transformer.py  viz.py
src/deqn_jax/optimizers/: __init__.py  gauss_newton.py  kfac.py  lbfgs.py  mao.py  mao_kfac.py  ngd.py  pcgrad.py  registry.py  shampoo.py  standard.py
src/deqn_jax/plots/: __init__.py  _style.py  compare.py  irf.py  training.py
src/deqn_jax/training/: __init__.py  autodiff.py  checkpointing.py  composite_loss.py  cycle.py  episode.py  history.py  linearize.py  loop_control.py  loss.py  moment_loss.py  (+8 more)
tests/: __init__.py  test_active_subspace.py  test_actor_critic.py  test_aio_loss.py  test_autodiff_equations.py  test_autodiff_multi_agent.py  test_basic.py  test_bound_penalties.py  test_brock_mirman_ss.py  test_checkpoint_best_fallback.py  test_config.py  test_config_validation.py  test_convergence.py  test_core_correctness.py  test_declarative_init.py  test_disaster_diagnostics.py  test_disaster_policy_net.py  test_discrete_shocks.py  test_evaluate.py  test_evaluate_discrete.py  test_evaluate_dynare.py  test_history_persistence.py  test_interp.py  test_irbc.py  test_kf_anchored_mlp.py  test_linear_plus_mlp.py  test_model_contract.py  test_moment_matching.py  test_networks_viz.py  test_olg_lifecycle.py  test_optimizers.py  test_output_links.py  test_plots.py  test_public_api.py  test_reduce_on_plateau.py  test_replay.py  test_replay_smoke.py  test_resume.py  test_sim_batch.py  test_sorted_within_batch.py  (+5 more)
(+63 files in other folders)
