[project]
name = "deqn-jax"
version = "0.1.0"
description = "Pure JAX implementation of Deep Equilibrium Networks for economics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Anna Smirnova", email = "anna@example.com"},
]
keywords = ["jax", "deep-learning", "economics", "equilibrium", "pinn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "equinox>=0.11.0",
    "optax>=0.2.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
cuda = ["jax[cuda12]>=0.4.20"]
dev = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
]
logging = [
    "tensorboardX>=2.6",
    "orbax-checkpoint>=0.5.0",
]
wandb = ["wandb>=0.15.0"]
kfac = ["kfac-jax>=0.0.6"]
all = ["deqn-jax[logging,wandb,kfac]"]

[project.scripts]
deqn-jax = "deqn_jax.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deqn_jax"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
