[project]
name = "deqn-jax"
version = "0.1.0"
description = "Pure JAX implementation of Deep Equilibrium Networks for economics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Anna Smirnova", email = "anna@example.com"},
]
keywords = ["jax", "deep-learning", "economics", "equilibrium", "pinn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "equinox>=0.11.0",
    "optax>=0.2.0",
    "numpy>=1.24.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
cuda = ["jax[cuda12]>=0.4.20"]
dev = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
]
logging = [
    "tensorboardX>=2.6",
    "orbax-checkpoint>=0.5.0",
]
wandb = ["wandb>=0.15.0"]
all = ["deqn-jax[logging,wandb]"]

[project.scripts]
deqn-jax = "deqn_jax.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deqn_jax"]

[tool.hatch.build.targets.sdist]
# Ship a clean source distribution: published code, tests, license, top-level
# docs, and configs. Exclude internal notes, experiment outputs, and
# iteration archive (research-workspace material).
include = [
    "src/deqn_jax/**",
    "tests/**",
    "configs/brock_mirman.yaml",
    "configs/default.yaml",
    "configs/disaster.yaml",
    "docs/disaster_corrected.tex",
    "docs/disaster_model_errata.md",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "**/__pycache__",
    "**/.pytest_cache",
    "**/*.egg-info",
    "docs/session_log.md",
    "docs/composite_loss.md",
    "docs/cmr_paper.pdf",
    "docs/disaster_paper.pdf",
    "docs/ollie_slides.pdf",
    "docs/disaster.tex",
    "checkpoints/**",
    "runs/**",
    "irf_results/**",
    "dynare/**",
    "scripts/**",
    "configs/_diag_*.yaml",
    "configs/dgx_*.yaml",
    "configs/disaster_gpu_*.yaml",
    "configs/disaster_lstm_*.yaml",
    "configs/disaster_staged_*.yaml",
    "configs/disaster_mao.yaml",
    "configs/disaster_v*.yaml",
    "PLAN.md",
    ".github/**",
    ".claude/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
