[project]
name = "deqn-jax"
version = "0.2.0"
description = "Pure JAX implementation of Deep Equilibrium Networks for economics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Anna Smirnova", email = "anna.smirnova@unil.ch"},
]
keywords = ["jax", "deep-learning", "economics", "equilibrium", "pinn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "equinox>=0.11.0",
    "optax>=0.2.0",
    "numpy>=1.24.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "treescope>=0.1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
cuda = ["jax[cuda12]>=0.4.20"]
dev = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
]
logging = [
    "tensorboardX>=2.6",
    "orbax-checkpoint>=0.5.0",
]
wandb = ["wandb>=0.15.0"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]
all = ["deqn-jax[logging,wandb,docs]"]

[project.scripts]
deqn-jax = "deqn_jax.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deqn_jax"]

[tool.hatch.build.targets.sdist]
# Ship a clean source distribution: published code, tests, license, top-level
# docs, and configs. Exclude internal notes, experiment outputs, and
# iteration archive (research-workspace material).
include = [
    "src/deqn_jax/**",
    "tests/**",
    "configs/brock_mirman.yaml",
    "configs/default.yaml",
    "configs/disaster.yaml",
    "docs/disaster_corrected.tex",
    "docs/disaster_model_errata.md",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "**/__pycache__",
    "**/.pytest_cache",
    "**/*.egg-info",
    "docs/session_log.md",
    "docs/design_notes.md",
    "docs/composite_loss.md",
    "docs/cmr_paper.pdf",
    "docs/disaster_paper.pdf",
    "docs/ollie_slides.pdf",
    "docs/disaster.tex",
    "checkpoints/**",
    "runs/**",
    "irf_results/**",
    "dynare/**",
    "scripts/**",
    "configs/_diag_*.yaml",
    "configs/dgx_*.yaml",
    "configs/disaster_gpu_*.yaml",
    "configs/disaster_lstm_*.yaml",
    "configs/disaster_staged_*.yaml",
    "configs/disaster_mao.yaml",
    "configs/disaster_v*.yaml",
    "PLAN.md",
    ".github/**",
    ".claude/**",
    "site/**",
    "mkdocs.yml",
    "docs/site/**",
    "docs/figures/training_step_spec.md",
    "docs/figures/*.jpeg",
    "docs/figures/*.jpg",
    "docs/figures/*.png",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pyright]
# Pylance reads this section automatically; no .vscode/settings.json
# needed. ``basic`` keeps the genuinely-useful checks (None-call,
# possibly-unbound, return-type lies) while suppressing the strict-mode
# noise that JAX/Equinox/Optax invariably produce -- partial typestubs,
# pytree leaves typed as ``Any``, ``eqx.Module.__call__`` not visible
# from the base class, etc.
#
# Tests are excluded because they intentionally pass Any-shaped dicts
# (configs, fake states) and exercise invalid inputs to test
# validation; Pyright on default rules flags those as type errors.
# Run ``uv run pyright tests/`` if you want a one-off sanity pass.
include = ["src"]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "examples/",
    "examples_suspect/",
    "scripts/",
    "dynare/",
    "docs/",
]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportPrivateImportUsage = false

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
    "E501",  # line too long (formatting concern, not correctness)
    "E741",  # ambiguous variable name -- economics uses L, I, K, etc. as domain conventions
    "E731",  # lambda assignment -- sometimes cleaner than def for one-liners
    "E402",  # module import not at top of file -- needed for conditional/lazy imports
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "penzai>=0.2.5",
    "pydeps>=3.0.6",
    "pytest>=9.0.2",
    "ruff>=0.15.11",
]
